# glosbe-ocr

./: README.md  example_tesseract.tsv  index.html  package.json  pnpm-lock.yaml
src/: App.tsx  Overlay.tsx  SearchResult.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs  ocr.rs  preferences.rs  screenshot.rs  search.rs
src/lib/: languages.ts
