[package]
name = "glosbe-ocr"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2024"


[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "glosbe_ocr_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
tauri = { version = "2.8.5", features = ["tray-icon"] }

tauri-plugin-global-shortcut = "2.3.0"
tauri-plugin-opener = "2.5.0"

anyhow = "1.0.99"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["time"] }
futures = {version = "0.3.31", default-features = false, features = ["executor"] }
reqwest = "0.12.23"
kuchikiki = "0.8.8-speedreader"
xcap = "0.7.1"
csv = {version = "1.3.1"}
regex = "1.11.2"
